ajustes e tradução de códigos

--- a/notebooks/01-limpeza-dados.ipynb
+++ b/notebooks/01-limpeza-dados.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 191,
    "id": "03fcd526",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 192,
    "id": "320145e0",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 193,
    "id": "cc9f4569",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 194,
    "id": "ffdd0d18",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 195,
    "id": "483e802e",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
        "(3717639, 41)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 196,
    "id": "723300af",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
        "       2020, 2024, 2025])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 197,
    "id": "32cec7ea",
    "metadata": {},
    "outputs": [],
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 198,
    "id": "7d1d594c",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 199,
    "id": "b4cb871c",
    "metadata": {},
    "outputs": [
@@ -224,7 +224,7 @@
        "np.float64(0.0)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 200,
    "id": "822ccf7f",
    "metadata": {},
    "outputs": [],
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 201,
    "id": "374682db",
    "metadata": {},
    "outputs": [],
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 202,
    "id": "4665d3d2",
    "metadata": {},
    "outputs": [],
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 203,
    "id": "2c4f3dda",
    "metadata": {},
    "outputs": [],
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 204,
    "id": "a695a4a8",
    "metadata": {},
    "outputs": [],
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 205,
    "id": "26c7b32d",
    "metadata": {},
    "outputs": [
@@ -311,7 +311,7 @@
        "(652360, 15)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 206,
    "id": "c66dafc0",
    "metadata": {},
    "outputs": [
@@ -503,7 +503,7 @@
        "9                 F32  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 207,
    "id": "c475256b",
    "metadata": {},
    "outputs": [],
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 208,
    "id": "bd82793f",
    "metadata": {},
    "outputs": [],
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 209,
    "id": "6e65f57b",
    "metadata": {},
    "outputs": [],
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 210,
    "id": "2267ffbe",
    "metadata": {},
    "outputs": [],
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 211,
    "id": "4b0e11f7",
    "metadata": {},
    "outputs": [],
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 212,
    "id": "38fe8a86",
    "metadata": {},
    "outputs": [
@@ -595,7 +595,7 @@
        "       'indigena'], dtype=object)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 213,
    "id": "3e028de9",
    "metadata": {},
    "outputs": [],
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 215,
    "id": "35e078b6",
    "metadata": {},
    "outputs": [
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 216,
    "id": "29f317d8",
    "metadata": {},
    "outputs": [],
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 217,
    "id": "51b741d7",
    "metadata": {},
    "outputs": [
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 218,
    "id": "402eaa2c",
    "metadata": {},
    "outputs": [
@@ -784,7 +784,7 @@
        "3105             2015               2007-02-01               0"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 218,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 219,
    "id": "1531f849",
    "metadata": {},
    "outputs": [],
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 220,
    "id": "59fec535",
    "metadata": {},
    "outputs": [
@@ -904,7 +904,7 @@
        "3115             2015               2014-10-28               0"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 220,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 221,
    "id": "a27f24e4",
    "metadata": {},
    "outputs": [
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 222,
    "id": "8b6f650b",
    "metadata": {},
    "outputs": [
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 223,
    "id": "1582a54a",
    "metadata": {},
    "outputs": [],
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 224,
    "id": "c1d98d25",
    "metadata": {},
    "outputs": [
@@ -1010,7 +1010,7 @@
        "(651745, 16)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 224,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 225,
    "id": "9e6e5c79",
    "metadata": {},
    "outputs": [
@@ -1181,35 +1181,13 @@
        "max                        1.0         4.000000  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_psico.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "7d67036c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "49.51\n"
-     ]
-    }
-   ],
-   "source": [
-    "media = df_psico['quantidade_aprovada_procedimento'].mean()\n",
-    "desvio = df_psico['quantidade_aprovada_procedimento'].std()\n",
-    "\n",
-    "cv = (media/desvio) * 100\n",
-    "print(cv.round(2))"
    ]
   },
   {
@@ -1222,8 +1200,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "4441b48b",
+   "execution_count": null,
+   "id": "2ab91135",
    "metadata": {},
    "outputs": [
     {
@@ -1236,22 +1214,12 @@
    ],
    "source": [
     "percentil = df_psico['quantidade_aprovada_procedimento'].quantile(0.999, interpolation='nearest')\n",
-    "print(percentil)"
+    "print(percentil)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "8de39108",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_psico = df_psico[df_psico['quantidade_aprovada_procedimento'] <= percentil].copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 179,
    "id": "4e4793ae",
    "metadata": {},
    "outputs": [
@@ -1261,7 +1229,7 @@
        "(651118, 16)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 230,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1280,7 +1248,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 181,
+   "id": "848b6c09",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "341\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_duplicados = df_psico.duplicated().sum()\n",
+    "print(total_duplicados)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "id": "09d0b6f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_psico = df_psico.drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "id": "ef9468d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_duplicados = df_psico.duplicated().sum()\n",
+    "print(total_duplicados)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
    "id": "8f02f538",
    "metadata": {},
    "outputs": [],
@@ -1299,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 185,
    "id": "1b5cb4ad",
    "metadata": {},
    "outputs": [],
@@ -1309,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 186,
    "id": "081cabde",
    "metadata": {},
    "outputs": [],
@@ -1319,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 187,
    "id": "1577dcb3",
    "metadata": {},
    "outputs": [
@@ -1468,7 +1484,7 @@
        "4                                 1  Adolescente (13-18)  "
       ]
      },
-     "execution_count": 48,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1479,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 188,
    "id": "51719007",
    "metadata": {},
    "outputs": [
@@ -1515,30 +1531,30 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>3.424610e+05</td>\n",
-       "      <td>3.424610e+05</td>\n",
-       "      <td>342461.000000</td>\n",
-       "      <td>342461.000000</td>\n",
-       "      <td>342461.000000</td>\n",
-       "      <td>342461.000000</td>\n",
+       "      <td>3.425680e+05</td>\n",
+       "      <td>3.425680e+05</td>\n",
+       "      <td>342568.000000</td>\n",
+       "      <td>342568.000000</td>\n",
+       "      <td>342568.00000</td>\n",
+       "      <td>342568.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>5.233916e+06</td>\n",
+       "      <td>5.233413e+06</td>\n",
        "      <td>3.010802e+08</td>\n",
-       "      <td>2019.596973</td>\n",
-       "      <td>6.651759</td>\n",
-       "      <td>1.901291</td>\n",
-       "      <td>2.471090</td>\n",
+       "      <td>2019.595858</td>\n",
+       "      <td>6.651827</td>\n",
+       "      <td>1.90096</td>\n",
+       "      <td>2.527904</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>1.735401e+06</td>\n",
-       "      <td>4.589136e+01</td>\n",
-       "      <td>3.224881</td>\n",
-       "      <td>3.431287</td>\n",
-       "      <td>3.223049</td>\n",
-       "      <td>6.537291</td>\n",
+       "      <td>1.735522e+06</td>\n",
+       "      <td>4.588535e+01</td>\n",
+       "      <td>3.225092</td>\n",
+       "      <td>3.431255</td>\n",
+       "      <td>3.22059</td>\n",
+       "      <td>8.080367</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -1546,7 +1562,7 @@
        "      <td>3.010800e+08</td>\n",
        "      <td>2014.000000</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>1.00000</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1555,7 +1571,7 @@
        "      <td>3.010802e+08</td>\n",
        "      <td>2017.000000</td>\n",
        "      <td>4.000000</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>1.00000</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1564,7 +1580,7 @@
        "      <td>3.010802e+08</td>\n",
        "      <td>2019.000000</td>\n",
        "      <td>7.000000</td>\n",
-       "      <td>1.000000</td>\n",
+       "      <td>1.00000</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1573,7 +1589,7 @@
        "      <td>3.010802e+08</td>\n",
        "      <td>2023.000000</td>\n",
        "      <td>10.000000</td>\n",
-       "      <td>2.000000</td>\n",
+       "      <td>2.00000</td>\n",
        "      <td>2.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1582,8 +1598,8 @@
        "      <td>3.010804e+08</td>\n",
        "      <td>2024.000000</td>\n",
        "      <td>12.000000</td>\n",
-       "      <td>119.000000</td>\n",
-       "      <td>570.000000</td>\n",
+       "      <td>119.00000</td>\n",
+       "      <td>1376.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1591,9 +1607,9 @@
       ],
       "text/plain": [
        "       id_estabelecimento_cnes  id_procedimento_ambulatorial  ano_atendimento  \\\n",
-       "count             3.424610e+05                  3.424610e+05    342461.000000   \n",
-       "mean              5.233916e+06                  3.010802e+08      2019.596973   \n",
-       "std               1.735401e+06                  4.589136e+01         3.224881   \n",
+       "count             3.425680e+05                  3.425680e+05    342568.000000   \n",
+       "mean              5.233413e+06                  3.010802e+08      2019.595858   \n",
+       "std               1.735522e+06                  4.588535e+01         3.225092   \n",
        "min               1.529600e+04                  3.010800e+08      2014.000000   \n",
        "25%               3.903893e+06                  3.010802e+08      2017.000000   \n",
        "50%               5.319226e+06                  3.010802e+08      2019.000000   \n",
@@ -1601,33 +1617,64 @@
        "max               9.695915e+06                  3.010804e+08      2024.000000   \n",
        "\n",
        "       mes_atendimento  quantidade_atendimentos  \\\n",
-       "count    342461.000000            342461.000000   \n",
-       "mean          6.651759                 1.901291   \n",
-       "std           3.431287                 3.223049   \n",
-       "min           1.000000                 1.000000   \n",
-       "25%           4.000000                 1.000000   \n",
-       "50%           7.000000                 1.000000   \n",
-       "75%          10.000000                 2.000000   \n",
-       "max          12.000000               119.000000   \n",
+       "count    342568.000000             342568.00000   \n",
+       "mean          6.651827                  1.90096   \n",
+       "std           3.431255                  3.22059   \n",
+       "min           1.000000                  1.00000   \n",
+       "25%           4.000000                  1.00000   \n",
+       "50%           7.000000                  1.00000   \n",
+       "75%          10.000000                  2.00000   \n",
+       "max          12.000000                119.00000   \n",
        "\n",
        "       quantidade_aprovada_procedimento  \n",
-       "count                     342461.000000  \n",
-       "mean                           2.471090  \n",
-       "std                            6.537291  \n",
+       "count                     342568.000000  \n",
+       "mean                           2.527904  \n",
+       "std                            8.080367  \n",
        "min                            1.000000  \n",
        "25%                            1.000000  \n",
        "50%                            1.000000  \n",
        "75%                            2.000000  \n",
-       "max                          570.000000  "
+       "max                         1376.000000  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_analise.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "id": "89fe6c61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_analise.to_csv('dados_limpos_final.csv', index=False, encoding='utf-8-sig')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "id": "8148b3f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(342568, 12)"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_analise.shape"
    ]
   }
  ],
